# ABLE

./: Cargo.toml  Dockerfile  README.Docker.md  compose.yaml
.github/workflows/: ci.yml  docker.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table_book.rs  m20220101_000002_create_table_user.rs  m20220101_000003_create_table_permissions.rs  main.rs
src/: auth.rs  config.rs  database.rs  main.rs  routes.rs  state.rs
src/log/: mod.rs
src/model/: book.rs
src/model/request/: login.rs  mod.rs  pagination.rs  search.rs  set_permissions.rs
src/model/request/user/: change_password.rs  mod.rs  update_user.rs
src/model/response/: add_book.rs  api.rs  book.rs  books.rs  drop_book.rs  get_permissions.rs  library_get_books.rs  login.rs  mod.rs  set_permissions.rs  update_book.rs
src/model/response/user/: change_password.rs  create_user.rs  update_user.rs
src/orm/: book.rs  mod.rs  permissions.rs  user.rs
src/routes/: auth.rs  library.rs  login.rs  mod.rs  user.rs
