[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
mysql = { version = "25.0.1", features = ["chrono"] }
once_cell = "1.20.2"
sea-query = { version = "0.32.1", features = ["with-chrono", "backend-mysql", "derive", "thread-safe"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
