[package]
name = "rust-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
once_cell = "1.20.2"
sea-orm = { version = "1.1.3", features = ["runtime-tokio-rustls", "sqlx-mysql"] }
sea-query = { version = "0.32.1", features = ["with-chrono", "backend-mysql", "derive", "thread-safe"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
